--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ListyCity</string>
+    <string name="add_entry">Confirm City</string>
+    <string name="add_button">Add City</string>
+    <string name="remove_button">Remove City</string>
+    <string name="edit_view_hint">Write City Name</string>
 </resources>
